# USW

./: .gitignore  README.md  flake.nix  pyproject.toml  usw.py
USW/: __main__.py  config.py  version.py
scripts/: build  check  setup
