[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "USW"
dependencies = [
  "icalendar",
  "recurring_ical_events",
]
dynamic = ["version"]
requires-python = ">=3.9"

[project.scripts]
usw = "USW.__main__:main"

[tool.setuptools.dynamic]
version = {attr = "USW.version.VERSION"}

[tool.flake8]
max-line-length = 110

[tool.isort]
line_length = 110

[tool.autopep8]
max_line_length = 110
in-place = true
recursive = true

[tool.mypy]
disallow_any_generics = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
warn_unused_ignores = true
warn_unreachable = true
show_error_context = true
ignore_missing_imports = true
